добавила связь с сервисом статистики. Пофиксила контроллеры, маппер и eventService