@@ -1,330 +1,332 @@
 package ru.practicum.service.event;
 
 import jakarta.persistence.EntityManager;
-import jakarta.persistence.TypedQuery;
 import jakarta.persistence.criteria.CriteriaBuilder;
 import jakarta.persistence.criteria.CriteriaQuery;
 import jakarta.persistence.criteria.Predicate;
 import jakarta.persistence.criteria.Root;
+import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import ru.practicum.dto.category.CategoryDto;
+import ru.practicum.dto.location.LocationDto;
+import ru.practicum.mapper.LocationMapper;
+import ru.practicum.model.Category;
+import ru.practicum.model.Location;
+import ru.practicum.repository.CategoryRepository;
 import ru.practicum.dto.event.EventDTO.Request.NewEventDto;
+import ru.practicum.dto.event.EventDTO.Request.UpdateEventAdminRequest;
+import ru.practicum.dto.event.EventDTO.Request.UpdateEventUserRequest;
 import ru.practicum.dto.event.EventDTO.Response.EventFullDto;
 import ru.practicum.dto.event.EventDTO.Response.EventShortDto;
 import ru.practicum.enums.EventState;
 import ru.practicum.enums.SortValue;
 import ru.practicum.enums.StateActionAdmin;
 import ru.practicum.enums.StateActionUser;
-import ru.practicum.exception.EventException;
+import ru.practicum.exception.ConflictException;
 import ru.practicum.exception.NotFoundException;
-import ru.practicum.exception.WrongTimeException;
-import ru.practicum.mapper.CategoryMapper;
+import ru.practicum.exception.ValidationException;
 import ru.practicum.mapper.EventMapper;
 import ru.practicum.model.Event;
 import ru.practicum.model.User;
 import ru.practicum.repository.EventRepository;
-import ru.practicum.service.category.CategoryService;
-import ru.practicum.service.user.UserService;
+import ru.practicum.repository.LocationRepository;
+import ru.practicum.repository.UserRepository;
 
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.time.format.DateTimeParseException;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
-@Transactional
+@Transactional(readOnly = true)
 @RequiredArgsConstructor
 public class EventServiceImpl implements EventService {
+
     private final EventRepository eventRepository;
-    private final UserService userService;
-    private final CategoryService categoryService;
+    private final UserRepository userRepository;
+    private final CategoryRepository categoryRepository;
+    private final LocationRepository locationRepository;
     private final EntityManager entityManager;
-
-
-    @Override
-    public EventShortDto createEvent(NewEventDto event, Long userId) {
-        User user = userService.getUserEntity(userId);
-        CategoryDto categoryDto = categoryService.getCategoryById(event.getCategory());
-
-        validateTime(event.getEventDate(), 2);
-
-        return EventMapper.toEventShortDto(eventRepository.save(EventMapper.toEvent(event, CategoryMapper.toCategory(categoryDto), user)));
-    }
+    private static final DateTimeFormatter FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
 
     @Override
-    public EventFullDto getEvent(Long eventId) {
-        Event event = eventRepository.findByIdAndPublishedOnIsNotNull(eventId).orElseThrow(() -> new NotFoundException("События с id: " + eventId + " не найдено."));
-        event.setViews(event.getViews() + 1);
-        return EventMapper.toFullEventDto(event);
-    }
+    @Transactional
+    public EventFullDto createEvent(NewEventDto newEventDto, Long userId) {
+        validateEventDate(newEventDto.getEventDate(), 2);
 
-    @Override
-    public EventFullDto getEventByUser(Long userId, Long eventId) {
-        userService.getUser(userId);
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException("Пользователь с ID=" + userId + " не найден."));
+        Category category = categoryRepository.findById(newEventDto.getCategory())
+                .orElseThrow(() -> new NotFoundException("Категория с ID=" + newEventDto.getCategory() + " не найдена."));
 
-        return EventMapper.toFullEventDto(eventRepository.findByEventIdAndUserId(eventId, userId).orElseThrow(() -> new NotFoundException("События с id: " + eventId + " не существует.")));
+        Location location = getLocation(newEventDto.getLocation());
+
+        Event event = EventMapper.toEvent(newEventDto, category, user, location);
+
+        return EventMapper.toFullEventDto(eventRepository.save(event));
     }
 
     @Override
     public List<EventShortDto> getEvents(Long userId, Integer from, Integer size) {
+        if (!userRepository.existsById(userId)) {
+            throw new NotFoundException("Пользователь с ID=" + userId + " не найден.");
+        }
         Pageable page = PageRequest.of(from / size, size);
-        return EventMapper.toEventShortDtoList(eventRepository.findAllByInitiatorId(userId, page).toList());
+        List<Event> events = (List<Event>) eventRepository.findAllByInitiatorId(userId, page);
+        return events.stream().map(EventMapper::toEventShortDto).collect(Collectors.toList());
     }
 
     @Override
-    public List<EventFullDto> getEventsByAdmin(List<Long> users, EventState states, List<Long> categoriesId,
-                                               String rangeStart, String rangeEnd, Integer from, Integer size) {
-        LocalDateTime start = null;
-        LocalDateTime end = null;
+    public EventFullDto getEventByUser(Long userId, Long eventId) {
+        if (!userRepository.existsById(userId)) {
+            throw new NotFoundException("Пользователь с ID=" + userId + " не найден.");
+        }
+        Event event = eventRepository.findByIdAndInitiatorId(eventId, userId)
+                .orElseThrow(() -> new NotFoundException("Событие с ID=" + eventId + " и инициатором ID=" + userId + " не найдено."));
+        return EventMapper.toFullEventDto(event);
+    }
 
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+    @Override
+    @Transactional
+    public EventFullDto updateEventByUser(Long userId, Long eventId, UpdateEventUserRequest updateRequest) {
+        if (!userRepository.existsById(userId)) {
+            throw new NotFoundException("Пользователь с ID=" + userId + " не найден.");
+        }
+        Event event = eventRepository.findByIdAndInitiatorId(eventId, userId)
+                .orElseThrow(() -> new NotFoundException("Событие с ID=" + eventId + " и инициатором ID=" + userId + " не найдено."));
 
-        try {
-            if (rangeStart != null && !rangeStart.isBlank()) {
-                start = LocalDateTime.parse(rangeStart, formatter);
+        if (event.getState() == EventState.PUBLISHED) {
+            throw new ConflictException("Нельзя изменить уже опубликованное событие.");
+        }
+
+        updateEventFields(event, updateRequest.getAnnotation(), updateRequest.getCategory(),
+                updateRequest.getDescription(), updateRequest.getEventDate(),
+                updateRequest.getLocation(), updateRequest.getPaid(),
+                updateRequest.getParticipantLimit(), updateRequest.getRequestModeration(),
+                updateRequest.getTitle());
+
+        if (updateRequest.getStateAction() != null) {
+            if (updateRequest.getStateAction() == StateActionUser.SEND_TO_REVIEW) {
+                event.setState(EventState.PENDING);
+            } else if (updateRequest.getStateAction() == StateActionUser.CANCEL_REVIEW) {
+                event.setState(EventState.CANCELED);
             }
-            if (rangeEnd != null && !rangeEnd.isBlank()) {
-                end = LocalDateTime.parse(rangeEnd, formatter);
+        }
+
+        return EventMapper.toFullEventDto(eventRepository.save(event));
+    }
+
+    @Override
+    @Transactional
+    public EventFullDto updateEventByAdmin(Long eventId, UpdateEventAdminRequest updateRequest) {
+        Event event = eventRepository.findById(eventId)
+                .orElseThrow(() -> new NotFoundException("Событие с ID=" + eventId + " не найдено."));
+
+        if (updateRequest.getStateAction() != null) {
+            if (updateRequest.getStateAction() == StateActionAdmin.PUBLISH_EVENT) {
+                if (event.getState() != EventState.PENDING) {
+                    throw new ConflictException("Нельзя опубликовать событие, так как оно не в состоянии ожидания. Текущий статус: " + event.getState());
+                }
+                event.setState(EventState.PUBLISHED);
+                event.setPublishedOn(LocalDateTime.now());
+            } else if (updateRequest.getStateAction() == StateActionAdmin.REJECT_EVENT) {
+                if (event.getState() == EventState.PUBLISHED) {
+                    throw new ConflictException("Нельзя отклонить уже опубликованное событие.");
+                }
+                event.setState(EventState.CANCELED);
             }
-        } catch (DateTimeParseException e) {
-            throw new IllegalArgumentException("Неверный формат даты. Ожидается yyyy-MM-dd HH:mm:ss", e);
         }
 
-        CriteriaBuilder builder = entityManager.getCriteriaBuilder();
-        CriteriaQuery<Event> query = builder.createQuery(Event.class);
-        Root<Event> root = query.from(Event.class);
+        updateEventFields(event, updateRequest.getAnnotation(), updateRequest.getCategory(),
+                updateRequest.getDescription(), updateRequest.getEventDate(),
+                updateRequest.getLocation(), updateRequest.getPaid(),
+                updateRequest.getParticipantLimit(), updateRequest.getRequestModeration(),
+                updateRequest.getTitle());
 
-        Predicate criteria = builder.conjunction();
-
-        if (categoriesId != null && !categoriesId.isEmpty()) {
-            criteria = builder.and(criteria, root.get("category").get("id").in(categoriesId));
-        }
-
-        if (users != null && !users.isEmpty()) {
-            criteria = builder.and(criteria, root.get("initiator").get("id").in(users));
-        }
-
-        if (states != null) {
-            criteria = builder.and(criteria, root.get("state").in(states));
-        }
-
-        if (start != null) {
-            criteria = builder.and(criteria, builder.greaterThanOrEqualTo(root.get("eventDate"), start));
-        }
-
-        if (end != null) {
-            criteria = builder.and(criteria, builder.lessThanOrEqualTo(root.get("eventDate"), end));
-        }
-
-        query.select(root).where(criteria);
-
-        TypedQuery<Event> typedQuery = entityManager.createQuery(query);
-
-        typedQuery.setFirstResult(from);
-        typedQuery.setMaxResults(size);
-
-        List<Event> events = typedQuery.getResultList();
-
-        if (events.isEmpty()) {
-            return Collections.emptyList();
-        }
-
-        return EventMapper.toEventFullDtoList(events);
+        return EventMapper.toFullEventDto(eventRepository.save(event));
     }
 
     @Override
     public List<EventShortDto> getEventsByUser(String text, List<Long> categories, Boolean paid, String rangeStart,
                                                String rangeEnd, Boolean onlyAvailable, SortValue sort,
-                                               Integer from, Integer size) {
-        LocalDateTime start = rangeStart != null ? LocalDateTime.parse(rangeStart, DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")) : null;
-        LocalDateTime end = rangeEnd != null ? LocalDateTime.parse(rangeEnd, DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")) : null;
+                                               Integer from, Integer size, HttpServletRequest request) {
+        LocalDateTime start = parseDate(rangeStart);
+        LocalDateTime end = parseDate(rangeEnd);
+
+        if (start != null && end != null && start.isAfter(end)) {
+            throw new ValidationException("Дата начала не может быть позже даты окончания.");
+        }
 
         CriteriaBuilder builder = entityManager.getCriteriaBuilder();
         CriteriaQuery<Event> query = builder.createQuery(Event.class);
-
         Root<Event> root = query.from(Event.class);
-        Predicate criteria = builder.conjunction();
+        List<Predicate> predicates = new ArrayList<>();
 
-        if (text != null) {
-            Predicate annotationContain = builder.like(builder.lower(root.get("annotation")),
-                    "%" + text.toLowerCase() + "%");
-            Predicate descriptionContain = builder.like(builder.lower(root.get("description")),
-                    "%" + text.toLowerCase() + "%");
-            Predicate containText = builder.or(annotationContain, descriptionContain);
+        predicates.add(builder.equal(root.get("state"), EventState.PUBLISHED));
 
-            criteria = builder.and(criteria, containText);
+        if (text != null && !text.isBlank()) {
+            predicates.add(builder.or(
+                    builder.like(builder.lower(root.get("annotation")), "%" + text.toLowerCase() + "%"),
+                    builder.like(builder.lower(root.get("description")), "%" + text.toLowerCase() + "%")
+            ));
         }
-
         if (categories != null && !categories.isEmpty()) {
-            Predicate containStates = root.get("category").get("id").in(categories);
-            criteria = builder.and(criteria, containStates);
+            predicates.add(root.get("category").get("id").in(categories));
         }
-
         if (paid != null) {
-            Predicate isPaid;
-            if (paid) {
-                isPaid = builder.isTrue(root.get("paid"));
-            } else {
-                isPaid = builder.isFalse(root.get("paid"));
+            predicates.add(builder.equal(root.get("paid"), paid));
+        }
+
+        if (start == null && end == null) {
+            predicates.add(builder.greaterThanOrEqualTo(root.get("eventDate"), LocalDateTime.now()));
+        } else {
+            if (start != null) {
+                predicates.add(builder.greaterThanOrEqualTo(root.get("eventDate"), start));
             }
-            criteria = builder.and(criteria, isPaid);
+            if (end != null) {
+                predicates.add(builder.lessThanOrEqualTo(root.get("eventDate"), end));
+            }
         }
 
-        if (rangeStart != null) {
-            Predicate greaterTime = builder.greaterThanOrEqualTo(root.get("eventDate").as(LocalDateTime.class), start);
-            criteria = builder.and(criteria, greaterTime);
-        }
-        if (rangeEnd != null) {
-            Predicate lessTime = builder.lessThanOrEqualTo(root.get("eventDate").as(LocalDateTime.class), end);
-            criteria = builder.and(criteria, lessTime);
+        if (onlyAvailable != null && onlyAvailable) {
+            predicates.add(builder.or(
+                    builder.equal(root.get("participantLimit"), 0),
+                    builder.lessThan(root.get("confirmedRequests"), root.get("participantLimit"))
+            ));
         }
 
-        query.select(root).where(criteria).orderBy(builder.asc(root.get("eventDate")));
+        query.where(predicates.toArray(new Predicate[0]));
+
+        if (sort == SortValue.VIEWS) {
+            query.orderBy(builder.desc(root.get("views")));
+        } else {
+            query.orderBy(builder.asc(root.get("eventDate")));
+        }
+
         List<Event> events = entityManager.createQuery(query)
                 .setFirstResult(from)
                 .setMaxResults(size)
                 .getResultList();
 
-        if (onlyAvailable) {
-            events = events.stream()
-                    .filter((event -> event.getConfirmedRequests() < (long) event.getParticipantLimit()))
-                    .collect(Collectors.toList());
+        return events.stream().map(EventMapper::toEventShortDto).collect(Collectors.toList());
+    }
+
+    @Override
+    @Transactional
+    public EventFullDto getEvent(Long eventId, HttpServletRequest request) {
+        Event event = eventRepository.findByIdAndState(eventId, EventState.PUBLISHED)
+                .orElseThrow(() -> new NotFoundException("Опубликованное событие с ID=" + eventId + " не найдено."));
+
+        event.setViews(event.getViews() + 1L);
+        eventRepository.save(event);
+
+        return EventMapper.toFullEventDto(event);
+    }
+
+    @Override
+    public List<EventFullDto> getEventsByAdmin(List<Long> users, List<EventState> states, List<Long> categories,
+                                               String rangeStart, String rangeEnd, Integer from, Integer size) {
+        LocalDateTime start = parseDate(rangeStart);
+        LocalDateTime end = parseDate(rangeEnd);
+
+        if (start != null && end != null && start.isAfter(end)) {
+            throw new ValidationException("Дата начала не может быть позже даты окончания.");
         }
 
-        if (sort != null) {
-            if (sort.equals(SortValue.EVENT_DATE)) {
-                events = events.stream().sorted(Comparator.comparing(Event::getEventDate)).collect(Collectors.toList());
-            } else {
-                events = events.stream().sorted(Comparator.comparing(Event::getViews)).collect(Collectors.toList());
-            }
+        CriteriaBuilder builder = entityManager.getCriteriaBuilder();
+        CriteriaQuery<Event> query = builder.createQuery(Event.class);
+        Root<Event> root = query.from(Event.class);
+        List<Predicate> predicates = new ArrayList<>();
+
+        if (users != null && !users.isEmpty()) {
+            predicates.add(root.get("initiator").get("id").in(users));
         }
+        if (states != null && !states.isEmpty()) {
+            predicates.add(root.get("state").in(states));
+        }
+        if (categories != null && !categories.isEmpty()) {
+            predicates.add(root.get("category").get("id").in(categories));
+        }
+        if (start != null) {
+            predicates.add(builder.greaterThanOrEqualTo(root.get("eventDate"), start));
+        }
+        if (end != null) {
+            predicates.add(builder.lessThanOrEqualTo(root.get("eventDate"), end));
+        }
+
+        query.where(predicates.toArray(new Predicate[0]));
+
+        List<Event> events = entityManager.createQuery(query)
+                .setFirstResult(from)
+                .setMaxResults(size)
+                .getResultList();
 
         if (events.isEmpty()) {
-            return new ArrayList<>();
+            return Collections.emptyList();
         }
 
-        return EventMapper.toEventShortDtoList(events);
+        return events.stream().map(EventMapper::toFullEventDto).collect(Collectors.toList());
     }
 
-    @Override
-    public FullEventDto updateEventByUser(Long userId, Long eventId, UpdateEventUserRequest event) {
-        userService.getUser(userId);
-        Event eventToUpdate = eventRepository.findById(eventId).orElseThrow(() -> new NotFoundException("События с id: " + eventId + " не существует."));
-
-        if (eventToUpdate.getState() == EventState.PUBLISHED) {
-            throw new EventException("Событие уже опубликовано.");
+    private void updateEventFields(Event event, String annotation, Long categoryId, String description,
+                                   LocalDateTime eventDate, LocationDto locationDto, Boolean paid,
+                                   Integer participantLimit, Boolean requestModeration, String title) {
+        if (annotation != null && !annotation.isBlank()) {
+            event.setAnnotation(annotation);
         }
-        if (event == null) {
-            return EventMapper.toFullEventDto(eventToUpdate);
+        if (categoryId != null) {
+            Category category = categoryRepository.findById(categoryId)
+                    .orElseThrow(() -> new NotFoundException("Категория с ID=" + categoryId + " не найдена."));
+            event.setCategory(category);
         }
-        if (event.getAnnotation() != null) {
-            eventToUpdate.setAnnotation(event.getAnnotation());
+        if (description != null && !description.isBlank()) {
+            event.setDescription(description);
         }
-        if (event.getTitle() != null) {
-            eventToUpdate.setTitle(event.getTitle());
+        if (eventDate != null) {
+            event.setEventDate(eventDate);
         }
-        if (event.getDescription() != null) {
-            eventToUpdate.setDescription(event.getDescription());
+        if (locationDto != null) {
+            Location location = getLocation(locationDto);
+            event.setLocation(location);
         }
-        if (event.getLocation() != null) {
-            eventToUpdate.setLocation(event.getLocation());
+        if (paid != null) {
+            event.setPaid(paid);
         }
-        if (event.getPaid() != null) {
-            eventToUpdate.setPaid(event.getPaid());
+        if (participantLimit != null) {
+            event.setParticipantLimit(Long.valueOf(participantLimit));
         }
-        if (event.getParticipantLimit() != null) {
-            eventToUpdate.setParticipantLimit(event.getParticipantLimit());
+        if (requestModeration != null) {
+            event.setRequestModeration(requestModeration);
         }
-        if (event.getRequestModeration() != null) {
-            eventToUpdate.setRequestModeration(event.getRequestModeration());
+        if (title != null && !title.isBlank()) {
+            event.setTitle(title);
         }
-        if (event.getEventDate() != null) {
-            validateTime(event.getEventDate(), 2);
-            eventToUpdate.setEventDate(event.getEventDate());
-        }
-        if (event.getCategoryId() != null) {
-            eventToUpdate.setCategory(CategoryMapper.toCategory(categoryService.getCategoryById(event.getCategoryId())));
-        }
-
-        if (event.getStateAction() != null) {
-            if (event.getStateAction().equals(StateActionUser.SEND_TO_REVIEW)) {
-                eventToUpdate.setState(EventState.PENDING);
-            } else {
-                eventToUpdate.setState(EventState.CANCELED);
-            }
-        }
-
-        return EventMapper.toFullEventDto(eventRepository.save(eventToUpdate));
     }
 
-    @Override
-    public FullEventDto updateEventByAdmin(Long eventId, UpdateEventAdminRequest event) {
-        Event eventToUpdate = eventRepository.findById(eventId).orElseThrow(() -> new NotFoundException("События с id: " + eventId + " не существует."));
-
-        if (event == null) {
-            return EventMapper.toFullEventDto(eventToUpdate);
-        }
-        if (event.getAnnotation() != null) {
-            eventToUpdate.setAnnotation(event.getAnnotation());
-        }
-        if (event.getTitle() != null) {
-            eventToUpdate.setTitle(event.getTitle());
-        }
-        if (event.getDescription() != null) {
-            eventToUpdate.setDescription(event.getDescription());
-        }
-        if (event.getLocation() != null) {
-            eventToUpdate.setLocation(event.getLocation());
-        }
-        if (event.getPaid() != null) {
-            eventToUpdate.setPaid(event.getPaid());
-        }
-        if (event.getParticipantLimit() != null) {
-            eventToUpdate.setParticipantLimit(event.getParticipantLimit());
-        }
-        if (event.getRequestModeration() != null) {
-            eventToUpdate.setRequestModeration(event.getRequestModeration());
-        }
-        if (event.getEventDate() != null) {
-            validateTime(event.getEventDate(), 1);
-            eventToUpdate.setEventDate(event.getEventDate());
-        }
-        if (event.getCategoryId() != null) {
-            eventToUpdate.setCategory(CategoryMapper.toCategory(categoryService.getCategoryById(event.getCategoryId())));
-        }
-
-        if (event.getStateAction() != null) {
-            if (event.getStateAction().equals(StateActionAdmin.PUBLISH_EVENT)) {
-                if (eventToUpdate.getPublishedOn() != null) {
-                    throw new EventException("Событие уже опубликовано.");
-                }
-                if (eventToUpdate.getState().equals(EventState.CANCELED)) {
-                    throw new EventException("Событие уже закрыто.");
-                }
-                eventToUpdate.setState(EventState.PUBLISHED);
-                eventToUpdate.setPublishedOn(LocalDateTime.now());
-            } else if (event.getStateAction().equals(StateActionAdmin.REJECT_EVENT)) {
-                if (eventToUpdate.getPublishedOn() != null) {
-                    throw new EventException("Событие уже опубликовано.");
-                }
-                eventToUpdate.setState(EventState.CANCELED);
-            }
-        }
-
-        return EventMapper.toFullEventDto(eventRepository.save(eventToUpdate));
-    }
-
-    private void validateTime(LocalDateTime eventDate, Integer hours) {
+    private void validateEventDate(LocalDateTime eventDate, int hours) {
         if (eventDate.isBefore(LocalDateTime.now().plusHours(hours))) {
-            throw new WrongTimeException("Дата и время на которые намечено событие не может быть раньше, чем через " + hours + " час(а) от текущего момента");
+            throw new ValidationException("Дата события должна быть как минимум через " + hours + " часа от текущего момента.");
         }
+    }
+
+    private LocalDateTime parseDate(String date) {
+        if (date == null || date.isBlank()) {
+            return null;
+        }
+        try {
+            return LocalDateTime.parse(date, FORMATTER);
+        } catch (Exception e) {
+            throw new ValidationException("Неверный формат даты. Ожидается yyyy-MM-dd HH:mm:ss");
+        }
+    }
+
+    private Location getLocation(LocationDto locationDto) {
+        return locationRepository.findByLatAndLon(locationDto.getLat(), locationDto.getLon())
+                .orElseGet(() -> locationRepository.save(LocationMapper.toLocation(locationDto)));
     }
 }
